2009-02-06  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* etc/emacs/templates/makefile.tpl: more c++ friendly, added automatic dependencies

2009-01-26  Cedric GESTES  <ctaf42@gmail.com>
	* bin/colormake.pl: better color on template error

2009-01-25  Cedric GESTES  <ctaf42@gmail.com>
	* etc/zsh/zshconf : always expand completion if possible

2009-01-25  Cedric GESTES  <ctaf42@gmail.com>
	* etc/emacs/color.emacs : emacs 23 tweak

2009-01-22  Cedric GESTES  <ctaf42@gmail.com>
	* emacs: template for hpp

2009-01-05  Cedric GESTES  <ctaf42@gmail.com>
	* shell: max 1042 process (avoid forkbomb)
	* shell: added warning to indicate user which file they can edit

2008-10-07  Cedric GESTES  <ctaf42@gmail.com>
	* etc/shlib/xsession.sh (wmlist): dont consider terms like wm (in random mode) !!

	* etc/fluxbox/init: disable wallpaper (use the gnome one by default)

2008-10-06  Cedric GESTES  <ctaf42@gmail.com>
	* xsession : fixed: each call to test_wm return a random wm when wm is 'random'

2008-10-01  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* etc/emacs/templates/makefile.tpl: support overriding CC, CXX, CFLAGS, LDFLAGS ! (for cross compil)

2008-09-30  Cedric GESTES  <ctaf42@gmail.com>
	* etc/shlib/xsession.sh (wmlist): renable randow WM

2008-09-27  Cedric GESTES  <ctaf42@gmail.com>
	* bin/ct-profile : added ion3 support

2008-09-26  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* vim : added some more config!

2008-09-24  Cedric GESTES  <ctaf42@gmail.com>
	* zsh : disable autocorrect..it doesnt keep the cache uptodate for command	* ion3 : added basic support


2008-09-24 GESTES Cedric <ctaf42@gmail.com>
	* ct-date : fixed

2008-07-08  ctaf  <gestes@aldebaran-robotics.com>
	* env : added debfullname

2008-07-05  Cedric GESTES  <ctaf42@gmail.com>
	* zsh: better url handling (handle metachar like ampersands)

2008-06-28  GESTES Cedric  <ctaf42@gmail.com>
	* emacs: speedbar is in black too

2008-06-02  Cedric GESTES  <gestes@aldebaran-robotics.com>