@@ -8,3 +8,4 @@ e16!starte16
 term!gnome-terminal
 aterm!~/.config/ctafconf/bin/ct-launch term
 beryl!beryl-manager
+awesome|awesome
